--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.datasource.username=root
 # spring.datasource.password=secret
 # spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# OpenAI configuration for chatbot integration
+# Set your key via environment variable or here (DO NOT commit secret keys)
+# Example: openai.api.key=${OPENAI_API_KEY}
+openai.api.key=
+# Model to use (gpt-4, gpt-4o, gpt-3.5-turbo, etc.)
+openai.model=gpt-3.5-turbo
